Added audio source and youtube links

--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <style>
 
+.underline{
+    text-decoration: underline;
+}        
+
+
 
 img{
 
@@ -43,7 +48,7 @@ text-decoration: underline;
 </style>
 
 <div><center>
-<h1>Blackpink Fandom!!!</h1>
+<h1 class="underline">Blackpink Fandom!!!</h1>
 
 <p>in your area</p>
 
@@ -64,25 +69,28 @@ text-decoration: underline;
 <div class="splash-the-second">
 <img src="./imgs/jumpy fun the second.jpg" alt="">  
 
-<div class="song-container">
-<!--line 67-->
+<div class="song-container"><!--line 67-->
+
+
 <h2 class="favorite-title">Favorite Songs</h2> <favorite-title>
 <ol>
 
     <li>Jump! </li>
     <li>Shut Down!</li> 
-    <li><a href="https://youtu.be/vRXZj0DzXIA?si=yrVe4zDv1aMu6pqM">Ice Cream!</a>
+    <li><a href="https://youtu.be/vRXZj0DzXIA?si=yrVe4zDv1aMu6pqM"><h3>Ice Cream!</h3></a><audio controls><source src="./audio bros/icee creamA.m4a"></audio>
     
     </li>
-<li>Hard To Love!</li>
+<li><a href="https://www.youtube.com/watch?v=y5sYLtSaXL8&list=RDy5sYLtSaXL8&start_radio=1"><h3>Hard To Love!</h3></a><!--Media Mister   free youtube-->
+<audio controls>
+<source src="./audio bros/videoplayback.m4a">
+</audio>
+</li>
 <li>Ready For Love!</li>
-
 
 
     
 </ol>
 </div>
-
 
 </div>
 
@@ -91,6 +99,4 @@ My favorite song by Jennie is You and Me.<br>My favorite song by Lisa is Rocksta
 
 </div>
 
-
 <img src=" " alt="">               
-
