--- a/index.html
+++ b/index.html
@@ -1,51 +1,4 @@
-<style>
-
-.underline{
-    text-decoration: underline;
-}        
-
-
-
-img{
-
-    width: 100%;
-}
-
-    body{
-
-
-
-
-background-color: rgb(0, 0, 0);
-
-
-
-
-color: rgb(253, 9, 115);
-
-
-
-    }
-
-.splash-the-second {
-
-size-adjust: inherit;
-
-}
-.splash {
-
-display: grid;
-grid-template-columns:.5fr 1fr .25fr;
-padding: 2rem;
-}
-
-.favorite-title{
-    width: 100%;
-display: flex;
-justify-content: center;
-text-decoration: underline;
-}
-</style>
+<link rel="stylesheet" href="style/main.css">
 
 <div><center>
 <h1 class="underline">Blackpink Fandom!!!</h1>
@@ -99,8 +52,14 @@ text-decoration: underline;
 </div>
 
 <div><p>Hi, I'm Jane and I really like Blackpink.<br> My favorite member is Rose. My favorite song by Rose is Toxic Till' the End<br>My favorite song by Jisoo is Your Love.<br>
-My favorite song by Jennie is You and Me.<br>My favorite song by Lisa is Rockstar.   </p></div>
+My favorite song by Jennie is You and Me.<br>My favorite song by Lisa is Rockstar.   </p>
+<a class=""href="album bros/jumpyfun-the-3rd.html"><img src="https://i.scdn.co/image/ab67616d0000b2736224d1236b0e0a0e1586efbb" alt=""></a>
+</div>
 
 </div>
 
-<img src=" " alt="">               
+<img src=" " alt="">   
+
+
+
+
