Added new sites and album covers

--- a/index.html
+++ b/index.html
@@ -61,5 +61,6 @@ My favorite song by Jennie is You and Me.<br>My favorite song by Lisa is Rocksta
 <img src=" " alt="">   
 
 
+<a class=""href="album bros/BornpinkYAY!!!.html"><img src="https://i.scdn.co/image/ab67616d0000b2734aeaaeeb0755f1d8a8b51738" alt=""></a></div>
 
-
+<a class=""href="album bros/THealbum.html"><img src="https://i.scdn.co/image/ab67616d0000b2737dd8f95320e8ef08aa121dfe" alt=""></a></div>
