Added more penguino

--- a/album bros/BornpinkYAY!!!.html
+++ b/album bros/BornpinkYAY!!!.html
@@ -1,3 +1,12 @@
 <h1>BORN PINK ALBUM!!!</h1>
 
 <link rel="stylesheet" href="../style/main.css">
+<li>Shut Down</li>
+<li>Yeah Yeah Yeah</li>
+<li>Hard To Love</li>
+<li>Ready For Love</li>
+<li>Tally</li>
+<li>Pink Venom</li>
+<li>The Happiest Girl</li>
+<li>Typa Girl</li>
+<img class="main-gif" src="https://media1.tenor.com/m/o9OAtBNKweoAAAAC/jennie-getting-arrested-blackpink.gif" alt="">
