--- a/album bros/THealbum.html
+++ b/album bros/THealbum.html
@@ -1,2 +1,11 @@
 <h1>BLACKPINK THE ALBUM!!!</h1>
 <link rel="stylesheet" href="../style/main.css">
+<li>How You Like That</li>
+<li>Ice Cream</li>
+<li>Lovesick Girls</li>
+<li>Pretty Savage</li>
+<li>Crazy Over You</li>
+<li>Love To Hate Me</li>
+<li>Bet You Wanna</li>
+<li>You Never Know</li>
+<img class="main-gif" src="https://media1.tenor.com/m/eNn6dku7nI0AAAAd/blackpink-how-you-like-that.gif" alt="">
