--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <p>in your area</p>
 
-<p>  By Jane   </p>
+   
 
 
 </center>
@@ -16,7 +16,7 @@
     <div class="gif-container" >
 
     <img src="https://media1.tenor.com/m/EWbIntyLvegAAAAC/bbrunette.gif" alt="">
-    <img src="https://media.tenor.com/d1nwbutOReUAAAAi/swipe-up-click.gif" alt="">
+    <a class="" href="gifcontainer.html/gifpenguin.html"><img src="https://media.tenor.com/d1nwbutOReUAAAAi/swipe-up-click.gif" alt=""></a>
 
     </div>
 <div class="splash-the-second">
@@ -51,16 +51,17 @@
 
 </div>
 
-<div><p>Hi, I'm Jane and I really like Blackpink.<br> My favorite member is Rose. My favorite song by Rose is Toxic Till' the End<br>My favorite song by Jisoo is Your Love.<br>
+<div><p>Hi, I really like Blackpink.<br> My favorite member is Rose. My favorite song by Rose is Toxic Till' the End<br>My favorite song by Jisoo is Your Love.<br>
 My favorite song by Jennie is You and Me.<br>My favorite song by Lisa is Rockstar.   </p>
 <a class=""href="album bros/jumpyfun-the-3rd.html"><img src="https://i.scdn.co/image/ab67616d0000b2736224d1236b0e0a0e1586efbb" alt=""></a>
+<a class=""href="album bros/BornpinkYAY!!!.html"><img src="https://i.scdn.co/image/ab67616d0000b2734aeaaeeb0755f1d8a8b51738" alt=""></a>
+<a class=""href="album bros/THealbum.html"><img src="https://i.scdn.co/image/ab67616d0000b2737dd8f95320e8ef08aa121dfe" alt=""></a>
+<a class=""href="album bros/SQUARES.html"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSECt1jxhLLtMa9uvrLrDGLjoqWMasg6YHIPQ&s" alt=""></a>
 </div>
+<a class="" href="gifcontainer.html/gifpenguin.html"><img src="" alt=""></a>
+
 
 </div>
 
 <img src=" " alt="">   
 
-
-<a class=""href="album bros/BornpinkYAY!!!.html"><img src="https://i.scdn.co/image/ab67616d0000b2734aeaaeeb0755f1d8a8b51738" alt=""></a></div>
-
-<a class=""href="album bros/THealbum.html"><img src="https://i.scdn.co/image/ab67616d0000b2737dd8f95320e8ef08aa121dfe" alt=""></a></div>
